# fewrel-project-ipavlov

./: .gitignore  README.md  framework.py  main.py  pyproject.toml  requirements.txt
hpsearch/: 001_Entity aware attention RNN.ipynb
models/encoders/: sentence_encoder.py
models/fewshot/: proto.py
models/fewshot/hyp_proto/: README.md  hyp_proto.py
models/fewshot/proto/: proto.py
models/sentence_encoders/cnn/: sentence_encoder.py
models/sentence_encoders/cnn/network/: embedding.py
models/sentence_encoders/common/: embedding.py
models/sentence_encoders/entity_aware_attention_rnn/: sentence_encoder.py
models/sentence_encoders/entity_aware_attention_rnn/network/: entity_aware_attention.py  self_attention.py
models/sentence_encoders/inception_cnn/: sentence_encoder.py
models/sentence_encoders/inception_cnn/network/: embedding.py  encoder.py
utils/: data_loader.py  utils.py
utils/embedders/: basic_embedder.py  glove_embedder.py
utils/hyptorch/: README.md  nn.py  pmath.py
utils/token_embedders/: basic_embedder.py  elmo_embedder.py  fasttext_embedder.py  glove_embedder.py  glove_json_embedder.py
