[tool.poetry]
name = "fewrel-project-ipavlov"
version = "0.1.0"
description = ""
authors = ["Konstantin Ostrovskiy <miontq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
pandas = "^0.24.2"
torch = "^1.0"
sklearn = "^0.0.0"
scikit-learn = "^0.20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
